--- a/angular.json
+++ b/angular.json
@@ -1,124 +1,136 @@
 {
-      "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-      "version": 1,
-      "newProjectRoot": "projects",
-      "projects": {
-        "demo": {
-          "root": "",
-          "sourceRoot": "src",
-          "projectType": "application",
-          "prefix": "app",
-          "schematics": {},
-          "architect": {
-            "build": {
-              "builder": "@angular-devkit/build-angular:browser",
-              "options": {
-                "outputPath": "dist/demo",
-                "index": "src/index.html",
-                "main": "src/main.ts",
-                "polyfills": "src/polyfills.ts",
-                "tsConfig": "src/tsconfig.app.json",
-                "assets": [
-                  "src/favicon.ico",
-                  "src/assets"
-                ],
-                "styles": [
-                  "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
-                  "node_modules/ng-zorro-antd/resizable/style/index.min.css",
-                  "src/styles.css"
-                ],
-                "scripts": []
-              },
-              "configurations": {
-                "production": {
-                  "fileReplacements": [
-                    {
-                      "replace": "src/environments/environment.ts",
-                      "with": "src/environments/environment.prod.ts"
-                    }
-                  ],
-                  "optimization": true,
-                  "outputHashing": "all",
-                  "sourceMap": false,
-                  "extractCss": true,
-                  "namedChunks": false,
-                  "aot": true,
-                  "extractLicenses": true,
-                  "vendorChunk": false,
-                  "buildOptimizer": true
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
+  "projects": {
+    "tfc-alloy-mixer": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "",
+      "sourceRoot": "src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/tfc-alloy-mixer",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
+            ],
+            "styles": [
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
                 }
-              }
-            },
-            "serve": {
-              "builder": "@angular-devkit/build-angular:dev-server",
-              "options": {
-                "browserTarget": "demo:build"
-              },
-              "configurations": {
-                "production": {
-                  "browserTarget": "demo:build:production"
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
                 }
-              }
-            },
-            "extract-i18n": {
-              "builder": "@angular-devkit/build-angular:extract-i18n",
-              "options": {
-                "browserTarget": "demo:build"
-              }
-            },
-            "test": {
-              "builder": "@angular-devkit/build-angular:karma",
-              "options": {
-                "main": "src/test.ts",
-                "polyfills": "src/polyfills.ts",
-                "tsConfig": "src/tsconfig.spec.json",
-                "karmaConfig": "src/karma.conf.js",
-                "styles": [
-                  "styles.css"
-                ],
-                "scripts": [],
-                "assets": [
-                  "src/favicon.ico",
-                  "src/assets"
-                ]
-              }
-            },
-            "lint": {
-              "builder": "@angular-devkit/build-angular:tslint",
-              "options": {
-                "tsConfig": [
-                  "src/tsconfig.app.json",
-                  "src/tsconfig.spec.json"
-                ],
-                "exclude": [
-                  "**/node_modules/**"
-                ]
-              }
+              ]
             }
           }
         },
-        "demo-e2e": {
-          "root": "e2e/",
-          "projectType": "application",
-          "architect": {
-            "e2e": {
-              "builder": "@angular-devkit/build-angular:protractor",
-              "options": {
-                "protractorConfig": "e2e/protractor.conf.js",
-                "devServerTarget": "demo:serve"
-              }
-            },
-            "lint": {
-              "builder": "@angular-devkit/build-angular:tslint",
-              "options": {
-                "tsConfig": "e2e/tsconfig.e2e.json",
-                "exclude": [
-                  "**/node_modules/**"
-                ]
-              }
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "tfc-alloy-mixer:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "tfc-alloy-mixer:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "tfc-alloy-mixer:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json",
+              "e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "tfc-alloy-mixer:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "tfc-alloy-mixer:serve:production"
             }
           }
         }
-      },
-      "defaultProject": "demo"
+      }
     }
+  },
+  "defaultProject": "tfc-alloy-mixer"
+}
